Chat closed alignment fix

--- a/less/stb-sprites.less
+++ b/less/stb-sprites.less
@@ -820,6 +820,13 @@ span.circle-16 {
   border-radius: 36px;
 }
 
+.chatClosed p {
+  div.circle-16,
+  span.circle-16 {
+    font-size: 14px;
+  }
+}
+
 div.circle-24,
 span.circle-24 {
   height: 48px;
